# TrafficGenerator

./: .gitignore  CMakeLists.txt  Makefile  README.md  precompiled.h  trgen.c
app/cfg/: config.c  config.h
dpdk_rxtx/: .gitignore  CMakeLists.txt  trgen.c
graphics/: graph.py  graphics.py  requirements.txt
mgmt/: gen_config.c  gen_config.h  management.c  management.h  stats.h
tools/: dpdk-devbind.py  dpdk-setup.sh
utils/: file_utils.c  file_utils.h
